Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="doctors-grid">
             <div class="doctor-card">
                 <div class="doctor-img">
-                    <img src="D:\عيادتي\Ramy-Elsamman.jpg" alt="دكتور أحمد">
+                    <img src="dr-ahmed.jpg" alt="دكتور أحمد">
                     <div class="social-overlay">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -86,7 +86,7 @@
             </div>
             <div class="doctor-card">
                 <div class="doctor-img">
-                    <img src="D:\عيادتي\دكتورة-سارة-الغريب.jpg" alt="دكتورة سارة">
+                    <img src="dr-sara.jpg" alt="دكتورة سارة">
                     <div class="social-overlay">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -155,4 +155,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
